fix: wrapped image in choice goes outside choice borders
(cherry picked from commit 44630c372184d57e8e0114d3a0164871f56cd528)

--- a/views/scss/item-creator.scss
+++ b/views/scss/item-creator.scss
@@ -1038,6 +1038,9 @@ img.dragging.ui-draggable-dragging {
                         display: flex;
                     }
                 }
+                .cke_editable {
+                    clear: both;
+                }
             }
             .qti-interaction {
                 .add-option {
